--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,6 @@
-.body {
+body {
     font-family: "Roboto", serif;
     background-color: white;
-    color: white;
+    color: black;
 }
 
-.page-nav {
-    background-color: blue;
-}
