--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,145 @@
 body {
-    font-family: "Roboto", serif;
-    background-color: white;
-    color: black;
+    font-family: "Roboto", sans-serif;
+    background-color: #FFFFFF;
+    color: #434455;
+    line-height: 1.5;
 }
 
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #4D5AE5;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+}
+
+.nav-web {
+    color: #2E2F42;  
+}
+
+a {
+text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.nav-link {
+    color: #2E2F42;
+    list-style-type: none;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.nav-link:hover {
+    color: #404BBF;
+}
+
+.nav-link:active {
+    color: #404BBF;
+}
+
+.page-address {
+    font-style: normal;
+}
+
+.page-addressmp a {
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.page-addressmp :hover {
+    color: #404BBF;
+}
+
+.section-first {
+    background-color: #2E2F42;
+}
+
+.section-text {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+}
+
+.button-order {
+    font-family: "Roboto", sans-serif;
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    background-color: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    cursor: pointer;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    box-sizing: border-box;
+    border: none;
+}
+
+.button-order:hover {
+    background-color: #404BBF;
+}
+
+.features-htxt {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.features-ptxt {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.section-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.txt-icon {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.p-icon {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+}
