--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ ul {
     list-style-type: none;
     text-decoration: none;
 }
-
+.page-addressmp:focus,
 .page-addressmp :hover {
     color: #404BBF;
 }
@@ -70,7 +70,7 @@ ul {
 .section-text {
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.1;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
@@ -80,8 +80,8 @@ ul {
     font-family: "Roboto", sans-serif;
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
-    height: 56px;
+    min-width: 169px;
+    line-height: 56px;
     background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
@@ -92,11 +92,9 @@ ul {
     margin-top: auto;
     margin-left: auto;
     margin-right: auto;
-    display: block;
-    box-sizing: border-box;
     border: none;
 }
-
+.button-focus,
 .button-order:hover {
     background-color: #404BBF;
 }
@@ -117,13 +115,22 @@ ul {
     color: #434455;
 }
 
+.page-section-3 {
+    background-color: #F4F4FD;
+}
+
 .section-team {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize;
+}
+
+.page-txt-bord {
+    background-color: #FFFFFF;
 }
 
 .txt-icon {
