--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,10 @@ ul {
     background-color: #F4F4FD;
 }
 
+.last-section {
+    background-color: #FFFFFF;
+}
+
 .section-team {
     font-weight: 700;
     font-size: 36px;
@@ -175,6 +179,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    line-height: 1.17
 }
 
 .nav-web-footer {
