--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ ul {
     background-color: #F4F4FD;
 }
 
-.last-section h2 {
+.section-team {
     background-color: #FFFFFF;
     font-weight: 700;
     font-size: 36px;
@@ -131,7 +131,7 @@ ul {
 }
 
 
-.page-txt-bord {
+.page-txt-bord li {
     background-color: #FFFFFF;
 }
 
@@ -151,6 +151,15 @@ ul {
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+}
+
+.text-portfolio {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
 }
 
 .sec-main-txt {
