--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,10 @@ ul {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    letter-spacing: 0.02em
 }
 
+.nav-link:focus,
 .nav-link:hover {
     color: #404BBF;
 }
@@ -131,7 +133,7 @@ ul {
 }
 
 
-.page-txt-bord li {
+.page-text-bord li {
     background-color: #FFFFFF;
 }
 
