--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,10 @@ ul {
     list-style-type: none;
     text-decoration: none;
 }
-.page-addressmp:focus,
+.page-addressmp:focus {
+    color: #404BBF;
+}
+
 .page-addressmp :hover {
     color: #404BBF;
 }
