--- a/css/styles.css
+++ b/css/styles.css
@@ -63,11 +63,14 @@ ul {
     list-style-type: none;
     text-decoration: none;
 }
-.page-addressmp:focus {
-    color: #404BBF;
+
+.address-link:focus {
+    color: #404bbf
 }
 
-.page-addressmp :hover {
+
+
+.address-link:hover {
     color: #404BBF;
 }
 
@@ -86,8 +89,6 @@ ul {
 
 .button-order {
     font-family: "Roboto", sans-serif;
-    border-radius: 4px;
-    padding: 16px 32px;
     min-width: 169px;
     line-height: 56px;
     background-color: #4d5ae5;
